Wierdness in Experiences Sections

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/Features-Boxed.css">
-    <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
-    <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body style="color: rgb(0,0,0);">
@@ -344,9 +341,7 @@
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/agency.js"></script>
-    <script src="assets/js/bs-animation.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="assets/js/script.min.js"></script>
 </body>
 
 </html>
