Image changes and External links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body style="color: rgb(0,0,0);">
     <div>
-        <nav class="navbar navbar-light navbar-expand-lg fixed-bottom navigation-clean">
+        <nav class="navbar navbar-light navbar-expand-lg fixed-bottom navigation-clean color">
             <div class="container"><a class="navbar-brand" href="#">Ishaan Bharal</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
@@ -46,10 +46,9 @@
                     <h4>732-666-7144</h4>
                     <h4>Austin, TX 78641</h4>
                     <div class="row">
-                        <div class="col"><a href="#" style="margin: .5rem;"><i class="fa fa-send" style="color: rgb(0,0,0);font-size: 50px;"></i></a><a href="#" style="margin: .5rem;"><i class="fa fa-linkedin-square" style="color: rgb(0,0,0);font-size: 50px;"></i></a>
+                        <div class="col"><a href="mailto:ishbharal@gmail.com" style="margin: .5rem;"><i class="fa fa-send" style="color: rgb(0,0,0);font-size: 50px;"></i></a><a href="https://www.linkedin.com/in/ishaan-bharal-7ab890132/" style="margin: .5rem;"><i class="fa fa-linkedin-square" style="color: rgb(0,0,0);font-size: 50px;"></i></a>
                             <a
-                                href="#" style="margin: .5rem;"><i class="fa fa-github-square" style="color: rgb(0,0,0);font-size: 50px;"></i></a>
-                        </div>
+                                href="https://github.com/Naguumo" style="margin: .5rem;"><i class="fa fa-github-square" style="color: rgb(0,0,0);font-size: 50px;"></i></a><a href="https://docs.google.com/document/d/1aLRHUfA24HrKODGymP08CZmwha7fGPUUyPdrDrBP-90/export?format=pdf" style="margin: .5rem;"><i class="fa fa-download" style="color: rgb(0,0,0);font-size: 50px;"></i></a></div>
                     </div>
                 </div>
             </div>
@@ -199,7 +198,7 @@
             </div>
         </div>
     </div>
-    <div data-bs-parallax-bg="true" id="experiences" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/293746.jpg&quot;);background-position: center;background-size: cover;margin-bottom: 3rem;padding-top: 15vh;padding-bottom: 15vh;">
+    <div data-bs-parallax-bg="true" id="experiences" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/wp2150008.jpg&quot;);background-position: center;background-size: cover;margin-bottom: 3rem;padding-top: 15vh;padding-bottom: 15vh;">
         <div class="container" style="padding: 20px;">
             <div class="row d-xl-flex justify-content-xl-center align-items-xl-center">
                 <div class="col d-xl-flex flex-column align-self-center justify-content-xl-center align-items-xl-center rounded color">
@@ -308,7 +307,7 @@
             </div>
         </div>
     </div>
-    <div data-bs-parallax-bg="true" id="projects" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/wp2150008.jpg&quot;);background-position: center;background-size: cover;margin-bottom: 3rem;padding-top: 15vh;padding-bottom: 15vh;">
+    <div data-bs-parallax-bg="true" id="projects" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/3107.jpg&quot;);background-position: center;background-size: cover;margin-bottom: 3rem;padding-top: 15vh;padding-bottom: 15vh;">
         <div class="container" style="padding: 20px;">
             <div class="row d-xl-flex justify-content-xl-center align-items-xl-center">
                 <div class="col d-xl-flex flex-column align-self-center justify-content-xl-center align-items-xl-center rounded color">
