--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
     </div>
     <div data-bs-parallax-bg="true" id="summary" style="height: 100%;background-position: center;background-size: cover;margin-bottom: 3rem;background-image: url(&quot;assets/img/Backgrounds/wp2150020.jpg&quot;);padding-top: 15vh;padding-bottom: 15vh;">
-        <div class="container" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="400" style="padding: 20px;">
+        <div class="container-fluid" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="400" style="padding: 20px;">
             <div class="row d-xl-flex justify-content-xl-center align-items-xl-center">
                 <div class="col-md-auto col-lg-6 d-xl-flex justify-content-xl-center align-items-xl-center" style="margin: 1rem;"><img class="rounded-circle img-fluid" data-bs-hover-animate="pulse" src="assets/img/mugshot.png"></div>
                 <div class="col text-center d-xl-flex flex-column align-self-center justify-content-xl-center align-items-xl-center rounded color" data-bs-hover-animate="pulse"
@@ -65,11 +65,11 @@
         </div>
     </div>
     <div data-bs-parallax-bg="true" id="education" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/wp2150085.png&quot;);background-position: center;background-size: cover;margin-bottom: 3rem;padding-top: 15vh;padding-bottom: 15vh;">
-        <div class="container" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
+        <div class="container-fluid" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
             <div class="row d-xl-flex justify-content-xl-center align-items-xl-center" data-bs-hover-animate="pulse">
                 <div class="col d-xl-flex flex-column align-self-center justify-content-xl-center align-items-xl-center rounded color">
                     <header>
-                        <h1 class="text-center">Education</h1>
+                        <h1 class="text-uppercase text-center">Education</h1>
                     </header>
                 </div>
             </div>
@@ -86,11 +86,11 @@
         </div>
     </div>
     <div data-bs-parallax-bg="true" id="skills" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/wp2150010.jpg&quot;);background-position: center;background-size: cover;margin-bottom: 3rem;padding-top: 15vh;padding-bottom: 15vh;">
-        <div class="container" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
+        <div class="container-fluid" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
             <div class="row d-xl-flex justify-content-xl-center align-items-xl-center">
                 <div class="col d-xl-flex flex-column align-self-center justify-content-xl-center align-items-xl-center rounded color" data-bs-hover-animate="pulse">
                     <header>
-                        <h1 class="text-center">Skills</h1>
+                        <h1 class="text-uppercase text-center">Skills</h1>
                     </header>
                 </div>
             </div>
@@ -161,11 +161,11 @@
         </div>
     </div>
     <div data-bs-parallax-bg="true" id="accomplishments" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/wp2150006.png&quot;);background-position: center;background-size: cover;margin-bottom: 3rem;padding-top: 15vh;padding-bottom: 15vh;">
-        <div class="container" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
+        <div class="container-fluid" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
             <div class="row d-xl-flex justify-content-xl-center align-items-xl-center">
                 <div class="col d-xl-flex flex-column align-self-center justify-content-xl-center align-items-xl-center rounded color" data-bs-hover-animate="pulse">
                     <header>
-                        <h1 class="text-center">Accomplishments</h1>
+                        <h1 class="text-uppercase text-center">Accomplishments</h1>
                     </header>
                 </div>
             </div>
@@ -183,11 +183,11 @@
         </div>
     </div>
     <div data-bs-parallax-bg="true" id="languages" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/wp2149975.jpg&quot;);background-position: center;background-size: cover;margin-bottom: 3rem;padding-top: 15vh;padding-bottom: 15vh;">
-        <div class="container" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
+        <div class="container-fluid" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
             <div class="row d-xl-flex justify-content-xl-center align-items-xl-center" data-bs-hover-animate="pulse">
                 <div class="col d-xl-flex flex-column align-self-center justify-content-xl-center align-items-xl-center rounded color">
                     <header>
-                        <h1 class="text-center">Languages</h1>
+                        <h1 class="text-uppercase text-center">Languages</h1>
                     </header>
                 </div>
             </div>
@@ -202,12 +202,12 @@
             </div>
         </div>
     </div>
-    <div data-bs-parallax-bg="true" id="experiences" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/wp2150008.jpg&quot;);background-position: center;background-size: cover;margin-bottom: 3rem;padding-top: 15vh;padding-bottom: 15vh;">
-        <div class="container" data-aos="fade-down" data-aos-duration="1000">
+    <div data-bs-parallax-bg="true" id="experiences" style="height: 100%;margin-bottom: 3rem;padding-top: 15vh;padding-bottom: 15vh;background-image: url(&quot;assets/img/Backgrounds/wp2150008.jpg&quot;);background-size: cover;">
+        <div class="container-fluid" data-aos="fade-down" data-aos-duration="1000">
             <div class="row d-xl-flex justify-content-xl-center align-items-xl-center">
                 <div class="col d-xl-flex flex-column align-self-center justify-content-xl-center align-items-xl-center rounded color" data-bs-hover-animate="pulse">
                     <header>
-                        <h1 class="text-center">Experience</h1>
+                        <h1 class="text-uppercase text-center">Experience</h1>
                     </header>
                 </div>
             </div>
@@ -286,30 +286,30 @@
         </div>
     </div>
     <div data-bs-parallax-bg="true" id="projects" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/3107.jpg&quot;);background-position: center;background-size: cover;margin-bottom: 3rem;padding-top: 15vh;padding-bottom: 15vh;">
-        <div class="container" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
+        <div class="container-fluid" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
             <div class="row d-xl-flex justify-content-xl-center align-items-xl-center" data-bs-hover-animate="pulse">
                 <div class="col d-xl-flex flex-column align-self-center justify-content-xl-center align-items-xl-center rounded color">
                     <header>
-                        <h1 class="text-center">Projects</h1>
+                        <h1 class="text-uppercase text-center">Projects</h1>
                     </header>
                 </div>
             </div>
             <div class="row d-lg-flex d-xl-flex justify-content-lg-center justify-content-xl-center projects">
-                <div class="col-lg-auto col-xl-5" data-bs-hover-animate="pulse" style="margin: .5rem;">
-                    <div class="row rounded color">
-                        <div class="col-md-auto col-lg-6 d-xl-flex align-items-xl-center"><img class="img-fluid" src="assets/img/desk.jpg"></div>
+                <div class="col-lg-auto col-xl-5 flex-grow-1 flex-shrink-1" data-bs-hover-animate="pulse" style="margin: .5rem;">
+                    <div class="row d-md-flex justify-content-md-center rounded color">
+                        <div class="col-md-auto col-lg-6 d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex flex-shrink-1 justify-content-center justify-content-sm-center justify-content-lg-center justify-content-xl-center align-items-xl-center" style="margin: .5rem;"><img src="assets/img/Projects/logo.png" height="150rem"></div>
                         <div class="col">
-                            <h3 class="text-center name">Project Name</h3>
-                            <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida.</p>
+                            <h3 class="text-center name">ScrumStubs.com</h3>
+                            <p class="description">Event Management Tool for Scrum Certifications as well as generic Meetups, Conferences, and Coaching.<a href="https://www.scrumstubs.com" style="text-decoration: blink;"><i class="fa fa-external-link d-xl-flex justify-content-xl-end align-items-xl-end" style="font-size: 30px;"></i></a></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-auto col-xl-5" data-bs-hover-animate="pulse" style="margin: .5rem;">
-                    <div class="row rounded color">
-                        <div class="col-md-auto col-lg-6 d-xl-flex align-items-xl-center"><img class="img-fluid" src="assets/img/desk.jpg"></div>
+                <div class="col-lg-auto col-xl-5 flex-grow-1 flex-shrink-1" data-bs-hover-animate="pulse" style="margin: .5rem;">
+                    <div class="row d-md-flex justify-content-md-center rounded color">
+                        <div class="col-md-auto col-lg-6 d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex flex-shrink-1 justify-content-center justify-content-sm-center justify-content-lg-center justify-content-xl-center align-items-xl-center" style="margin: .5rem;"><img src="assets/img/Projects/playerGrey_up1.png" height="150rem"></div>
                         <div class="col">
-                            <h3 class="text-center name">Project Name</h3>
-                            <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida.</p>
+                            <h3 class="text-center name">Dodge the Creeps</h3>
+                            <p class="description">Basic Dodging Game Made Using the GoDot Engine. Implements random spawning, collision detection, and scoring.<a style="text-decoration: blink;"><i class="fa fa-download d-xl-flex justify-content-xl-end align-items-xl-end" style="font-size: 30px;"></i></a></p>
                         </div>
                     </div>
                 </div>
