--- a/index.html
+++ b/index.html
@@ -295,21 +295,21 @@
                 </div>
             </div>
             <div class="row d-lg-flex d-xl-flex justify-content-lg-center justify-content-xl-center projects">
-                <div class="col-lg-auto col-xl-5 flex-grow-1 flex-shrink-1" data-bs-hover-animate="pulse" style="margin: .5rem;">
-                    <div class="row d-md-flex justify-content-md-center rounded color">
-                        <div class="col-md-auto col-lg-6 d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex flex-shrink-1 justify-content-center justify-content-sm-center justify-content-lg-center justify-content-xl-center align-items-xl-center" style="margin: .5rem;"><img src="assets/img/Projects/logo.png" height="150rem"></div>
-                        <div class="col">
+                <div class="col-lg-auto col-xl-6 flex-grow-1 flex-shrink-1" data-bs-hover-animate="pulse">
+                    <div class="row d-md-flex justify-content-md-center rounded color" style="margin-right: .1rem;margin-left: .1rem;">
+                        <div class="col-md-auto col-lg-6 d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex flex-shrink-1 justify-content-center justify-content-sm-center justify-content-lg-center justify-content-xl-center align-items-xl-center"><a href="https://www.scrumstubs.com" style="text-decoration: blink;"><img src="assets/img/Projects/logo.png" height="150rem"></a></div>
+                        <div class="col-md-auto col-lg-6">
                             <h3 class="text-center name">ScrumStubs.com</h3>
-                            <p class="description">Event Management Tool for Scrum Certifications as well as generic Meetups, Conferences, and Coaching.<a href="https://www.scrumstubs.com" style="text-decoration: blink;"><i class="fa fa-external-link d-xl-flex justify-content-xl-end align-items-xl-end" style="font-size: 30px;"></i></a></p>
+                            <p class="d-lg-flex description">Event Management Tool for Scrum Certifications as well as generic Meetups, Conferences, and Coaching.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-auto col-xl-5 flex-grow-1 flex-shrink-1" data-bs-hover-animate="pulse" style="margin: .5rem;">
-                    <div class="row d-md-flex justify-content-md-center rounded color">
-                        <div class="col-md-auto col-lg-6 d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex flex-shrink-1 justify-content-center justify-content-sm-center justify-content-lg-center justify-content-xl-center align-items-xl-center" style="margin: .5rem;"><img src="assets/img/Projects/playerGrey_up1.png" height="150rem"></div>
-                        <div class="col">
+                <div class="col-lg-auto col-xl-6 flex-grow-1 flex-shrink-1" data-bs-hover-animate="pulse">
+                    <div class="row d-md-flex justify-content-md-center rounded color" style="margin-right: .1rem;margin-left: .1rem;">
+                        <div class="col-md-auto col-lg-6 d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex flex-shrink-1 justify-content-center justify-content-sm-center justify-content-lg-center justify-content-xl-center align-items-xl-center"><a style="text-decoration: blink;"><img src="assets/img/Projects/playerGrey_up1.png" height="150rem"></a></div>
+                        <div class="col-md-auto col-lg-6">
                             <h3 class="text-center name">Dodge the Creeps</h3>
-                            <p class="description">Basic Dodging Game Made Using the GoDot Engine. Implements random spawning, collision detection, and scoring.<a style="text-decoration: blink;"><i class="fa fa-download d-xl-flex justify-content-xl-end align-items-xl-end" style="font-size: 30px;"></i></a></p>
+                            <p class="d-lg-flex description">Basic Dodging Game Made Using the GoDot Engine. Implements random spawning, collision detection, and scoring.</p>
                         </div>
                     </div>
                 </div>
