--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Ishaan Bharal</title>
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="Ishaan, Bharal, Resume, Software, Engineer, Developer, Web Developer, Designer, Frontend, Backend, Full Stack, University of Texas at Dallas, Computer Science, Austin, Texas, Leander, United States, Java, Python, HTML, CSS, React, SQL, PostgreSQL, MySQL, Git, VS Code, JSON, Windows, Photoshop, Object Oriented Design, LinkedIn, Job, Software, Computers">
+    <meta name="title" content="Ishaan Bharal">
+    <meta name="twitter:description" content="Ishaan Bharal's Resume. A site to show off the career, achievements, and overall progression Ishaan has made in his work life">
+    <meta property="og:image" content="assets/img/mugshot.png">
+    <meta name="description" content="Ishaan Bharal's Resume. A site to show off the career, achievements, and overall progression Ishaan has made in his work life">
     <meta name="twitter:title" content="Ishaan Bharal">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:type" content="website">
+    <meta name="twitter:image" content="assets/img/mugshot.png">
     <link rel="icon" type="image/png" sizes="1200x1552" href="assets/img/favicon.png">
     <link rel="icon" type="image/png" sizes="1200x1552" href="assets/img/favicon.png">
     <link rel="icon" type="image/png" sizes="1200x1552" href="assets/img/favicon.png">
@@ -24,9 +32,9 @@
 <body style="color: rgb(0,0,0);">
     <div>
         <nav class="navbar navbar-light navbar-expand-lg fixed-bottom navigation-clean color">
-            <div class="container"><a class="navbar-brand" href="#">Ishaan Bharal</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse"
-                    id="navcol-1">
+            <div class="container"><a class="navbar-brand" href="#"><img src="assets/img/name_logo.png" width="200rem"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div
+                    class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#summary">Summary</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
@@ -36,9 +44,9 @@
                         <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#experiences">Experience</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     </ul>
-                </div>
             </div>
-        </nav>
+    </div>
+    </nav>
     </div>
     <div data-bs-parallax-bg="true" id="summary" style="height: 100%;background-position: center;background-size: cover;margin-bottom: 3rem;background-image: url(&quot;assets/img/Backgrounds/wp2150020.jpg&quot;);padding-top: 15vh;padding-bottom: 15vh;">
         <div class="container-fluid" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="400" style="padding: 20px;">
