--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="icon" type="image/png" sizes="1200x1552" href="assets/img/favicon.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
@@ -31,18 +31,17 @@
 
 <body style="color: rgb(0,0,0);">
     <div>
-        <nav class="navbar navbar-light navbar-expand-lg fixed-bottom navigation-clean color">
-            <div class="container"><a class="navbar-brand" href="#"><img src="assets/img/name_logo.png" width="200rem"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <nav class="navbar navbar-light navbar-expand-lg fixed-bottom navigation-clean color" style="padding: .5rem;">
+            <div class="container"><a class="navbar-brand js-scroll-trigger" href="#summary"><img src="assets/img/name_logo.png" width="200rem"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div
                     class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#summary">Summary</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#accomplishments">Accomplishments</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#languages">Languages</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#experiences">Experience</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                        <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#education" style="padding-right: 1rem;padding-left: 1rem;">Education</a></li>
+                        <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#skills" style="padding-right: 1rem;padding-left: 1rem;">Skills</a></li>
+                        <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#accomplishments" style="padding-right: 1rem;padding-left: 1rem;">Accomplishments</a></li>
+                        <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#languages" style="padding-right: 1rem;padding-left: 1rem;">Languages</a></li>
+                        <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#experiences" style="padding-right: 1rem;padding-left: 1rem;">Experience</a></li>
+                        <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#projects" style="padding-right: 1rem;padding-left: 1rem;">Projects</a></li>
                     </ul>
             </div>
     </div>
@@ -307,7 +306,8 @@
                         <div class="col-md-auto col-lg-6 d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex flex-shrink-1 justify-content-center justify-content-sm-center justify-content-lg-center justify-content-xl-center align-items-xl-center"><a href="https://www.scrumstubs.com" style="text-decoration: blink;"><img src="assets/img/Projects/logo.png" height="150rem"></a></div>
                         <div class="col-md-auto col-lg-6">
                             <h3 class="text-center name">ScrumStubs.com</h3>
-                            <p class="d-lg-flex description">Event Management Tool for Scrum Certifications as well as generic Meetups, Conferences, and Coaching.</p>
+                            <p class="d-lg-flex description">Event Management Tool for Scrum Certifications as well as generic Meetups, Conferences, and Coaching. Used to connect those wanting certification with those that provide it. Made using Django, PostgreSQL, Bootstrap, JQuery,
+                                Nginx, and Gunicorn.</p>
                         </div>
                     </div>
                 </div>
@@ -316,7 +316,7 @@
                         <div class="col-md-auto col-lg-6 d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex flex-shrink-1 justify-content-center justify-content-sm-center justify-content-lg-center justify-content-xl-center align-items-xl-center"><a style="text-decoration: blink;"><img src="assets/img/Projects/playerGrey_up1.png" height="150rem"></a></div>
                         <div class="col-md-auto col-lg-6">
                             <h3 class="text-center name">Dodge the Creeps</h3>
-                            <p class="d-lg-flex description">Basic Dodging Game Made Using the GoDot Engine. Implements random spawning, collision detection, and scoring.</p>
+                            <p class="d-lg-flex description">Basic Dodging Game Made Using the GoDot Engine. Implements random spawning, collision detection, and scoring. Compatible with Web, Android, and IOS.</p>
                         </div>
                     </div>
                 </div>
