--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                         <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#education" style="padding-right: 1rem;padding-left: 1rem;">Education</a></li>
                         <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#skills" style="padding-right: 1rem;padding-left: 1rem;">Skills</a></li>
                         <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#accomplishments" style="padding-right: 1rem;padding-left: 1rem;">Accomplishments</a></li>
-                        <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#languages" style="padding-right: 1rem;padding-left: 1rem;">Languages</a></li>
                         <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#experiences" style="padding-right: 1rem;padding-left: 1rem;">Experience</a></li>
                         <li class="nav-item" role="presentation" style="margin: 0;"><a class="nav-link js-scroll-trigger" href="#projects" style="padding-right: 1rem;padding-left: 1rem;">Projects</a></li>
                     </ul>
@@ -97,7 +96,7 @@
             </header>
         </div>
     </div>
-    <div data-bs-parallax-bg="true" id="skills" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/wp2150010.jpg&quot;);background-position: center;background-size: cover;padding-top: 10vh;padding-bottom: 10vh;">
+    <div data-bs-parallax-bg="true" id="skills" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/wp2149975.jpg&quot;);background-position: center;background-size: cover;padding-top: 10vh;padding-bottom: 10vh;">
         <div class="container-fluid" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
             <div class="row d-xl-flex justify-content-center align-items-xl-start features">
                 <div class="col-md-12 col-lg-3 rounded color" data-bs-hover-animate="pulse" style="padding: 1rem;margin: 1rem;">
@@ -183,26 +182,6 @@
                         <li class="list-group-item text-center d-xl-flex justify-content-xl-center color"><span>Odyssey Of The Mind World Competitor</span></li>
                         <li class="list-group-item text-center d-xl-flex justify-content-xl-center color"><span>John Hopkins Center for Talented Youth Participant<br></span></li>
                         <li class="list-group-item text-center d-xl-flex justify-content-xl-center color"><span>JavaScript Developer Certification - W3 Schools<br></span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row d-xl-flex justify-content-xl-center align-items-xl-center" data-bs-hover-animate="pulse">
-        <div class="col d-xl-flex flex-column align-self-center justify-content-xl-center align-items-xl-center rounded color">
-            <header>
-                <h1 class="text-uppercase text-center">Languages</h1>
-            </header>
-        </div>
-    </div>
-    <div data-bs-parallax-bg="true" id="languages" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/wp2149975.jpg&quot;);background-position: center;background-size: cover;padding-top: 10vh;padding-bottom: 10vh;">
-        <div class="container-fluid" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
-            <div class="row" data-bs-hover-animate="pulse">
-                <div class="col d-flex justify-content-center rounded" style="padding: 1rem;margin: 1rem;">
-                    <ul class="list-group">
-                        <li class="list-group-item text-center d-xl-flex justify-content-xl-center color"><span>English - Native Understanding - Written and Oral Fluency</span></li>
-                        <li class="list-group-item text-center d-xl-flex justify-content-center color"><span>Hindi - Native Understanding - Oral Fluency<br></span></li>
-                        <li class="list-group-item text-center d-xl-flex justify-content-center color"><span>Japanese - Beginner's Understanding - Oral Fluency<br></span></li>
                     </ul>
                 </div>
             </div>
@@ -321,6 +300,13 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row d-xl-flex justify-content-xl-center align-items-xl-center" data-bs-hover-animate="pulse">
+        <div class="col d-xl-flex flex-column align-self-center justify-content-xl-center align-items-xl-center rounded color">
+            <header>
+                <h1 class="text-uppercase text-center">Extra</h1>
+            </header>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
