--- a/index.html
+++ b/index.html
@@ -177,11 +177,12 @@
             <div class="row" data-bs-hover-animate="pulse">
                 <div class="col d-flex justify-content-center rounded" style="padding: 1rem;margin: 1rem;">
                     <ul class="list-group">
-                        <li class="list-group-item text-center d-xl-flex justify-content-xl-center color"><span>Python Developer Certification - W3 Schools<br></span></li>
+                        <li class="list-group-item text-center d-xl-flex justify-content-xl-center color"><span>Certified Scrum Master (CSM)<br></span></li>
                         <li class="list-group-item text-center d-xl-flex justify-content-xl-center color"><span>FIRST Robotics Competition World Finalist&nbsp;</span></li>
                         <li class="list-group-item text-center d-xl-flex justify-content-xl-center color"><span>Odyssey Of The Mind World Competitor</span></li>
                         <li class="list-group-item text-center d-xl-flex justify-content-xl-center color"><span>John Hopkins Center for Talented Youth Participant<br></span></li>
                         <li class="list-group-item text-center d-xl-flex justify-content-xl-center color"><span>JavaScript Developer Certification - W3 Schools<br></span></li>
+                        <li class="list-group-item text-center d-xl-flex justify-content-xl-center color"><span>Python Developer Certification - W3 Schools<br></span></li>
                     </ul>
                 </div>
             </div>
@@ -279,25 +280,15 @@
     </div>
     <div data-bs-parallax-bg="true" id="projects" style="height: 100%;background-image: url(&quot;assets/img/Backgrounds/wp2150020.jpg&quot;);background-position: center;background-size: cover;padding-top: 10vh;padding-bottom: 10vh;">
         <div class="container-fluid" data-aos="fade-down" data-aos-duration="1000" style="padding: 20px;">
-            <div class="row d-lg-flex d-xl-flex justify-content-lg-center justify-content-xl-center projects">
-                <div class="col-lg-auto col-xl-6 flex-grow-1 flex-shrink-1" data-bs-hover-animate="pulse">
-                    <div class="row d-md-flex justify-content-md-center rounded color" style="margin-right: .1rem;margin-left: .1rem;">
-                        <div class="col-md-auto col-lg-6 d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex flex-shrink-1 justify-content-center justify-content-sm-center justify-content-lg-center justify-content-xl-center align-items-xl-center"><a href="https://www.scrumstubs.com" style="text-decoration: blink;"><img src="assets/img/Projects/logo.png" height="150rem"></a></div>
-                        <div class="col-md-auto col-lg-6">
-                            <h3 class="text-center name">ScrumStubs.com</h3>
-                            <p class="d-lg-flex description">Event Management Tool for Scrum Certifications as well as generic Meetups, Conferences, and Coaching. Used to connect those wanting certification with those that provide it. Made using Django, PostgreSQL, Bootstrap, JQuery,
-                                Nginx, and Gunicorn.</p>
-                        </div>
-                    </div>
+            <div class="row projects">
+                <div class="col text-center rounded color" data-bs-hover-animate="pulse" style="margin: .5rem;">
+                    <h3 class="text-center name">SCRUMSTUBS</h3><img class="img-fluid" src="assets/img/Projects/logo.png">
+                    <p class="text-left d-lg-flex description">Event Management Tool for Scrum Certifications as well as generic Meetups, Conferences, and Coaching. Used to connect those wanting certification with those that provide it. Made using Django, PostgreSQL, Bootstrap, JQuery, Nginx,
+                        and Gunicorn.</p>
                 </div>
-                <div class="col-lg-auto col-xl-6 flex-grow-1 flex-shrink-1" data-bs-hover-animate="pulse">
-                    <div class="row d-md-flex justify-content-md-center rounded color" style="margin-right: .1rem;margin-left: .1rem;">
-                        <div class="col-md-auto col-lg-6 d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex flex-shrink-1 justify-content-center justify-content-sm-center justify-content-lg-center justify-content-xl-center align-items-xl-center"><a style="text-decoration: blink;"><img src="assets/img/Projects/playerGrey_up1.png" height="150rem"></a></div>
-                        <div class="col-md-auto col-lg-6">
-                            <h3 class="text-center name">Dodge the Creeps</h3>
-                            <p class="d-lg-flex description">Basic Dodging Game Made Using the GoDot Engine. Implements random spawning, collision detection, and scoring. Compatible with Web, Android, and IOS.</p>
-                        </div>
-                    </div>
+                <div class="col text-center rounded color" data-bs-hover-animate="pulse" style="margin: .5rem;">
+                    <h3 class="text-center name">Dodge the creeps</h3><img class="img-fluid" src="assets/img/Projects/playerGrey_up1.png">
+                    <p class="text-left d-lg-flex description">Basic Dodging Game Made Using the GoDot Engine. Implements random spawning, collision detection, and scoring. Compatible with Web, Android, and IOS.<br></p>
                 </div>
             </div>
         </div>
